Fix repository name in redirect URLs

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0;url=https://krone128.github.io/visionsnap-webpage/" />
+    <meta http-equiv="refresh" content="0;url=https://krone128.github.io/visioinsnap-webpage/" />
     <title>VisionSnap</title>
     <script>
-      window.location.href = "https://krone128.github.io/visionsnap-webpage/";
+      window.location.href = "https://krone128.github.io/visioinsnap-webpage/";
     </script>
   </head>
   <body>
-    If you are not redirected automatically, follow this <a href="https://krone128.github.io/visionsnap-webpage/">link</a>.
+    If you are not redirected automatically, follow this <a href="https://krone128.github.io/visioinsnap-webpage/">link</a>.
   </body>
 </html>
